syntax = "proto3";

package priceforecastmodule;
option go_package = "gitlab.com/openfmb/psm/ops/protobuf/go-openfmb-ops-protobuf/v2/openfmb/priceforecastmodule";
option java_package = "openfmb.priceforecastmodule";
option java_multiple_files = true;
option csharp_namespace = "openfmb.priceforecastmodule";

import "uml.proto";
import "google/protobuf/wrappers.proto";
import "commonmodule/commonmodule.proto";


message PriceForecastPoint
{
    commonmodule.Timestamp forecastTime = 1 [(uml.option_required_field) = true, (uml.option_multiplicity_min) = 1];
    google.protobuf.FloatValue dollarPerKW = 2;    
}


message PriceForecastSCH
{    
    repeated PriceForecastPoint crvPts = 1 [(uml.option_required_field) = true, (uml.option_multiplicity_min) = 1];
}

message PriceForecast
{
    commonmodule.ForecastValueSource forecastValueSource = 1 [(uml.option_parent_message) = true];
    PriceForecastSCH priceForecastSCH = 2;
}


message PriceForecastProfile
{
    option (uml.option_openfmb_profile) = true;
    commonmodule.MessageInfo messageInfo = 1 [(uml.option_parent_message) = true];
    PriceForecast priceForecast = 2 [(uml.option_required_field) = true, (uml.option_multiplicity_min) = 1];
    
}